Updated(3) `PlaylistController` fix errors in `service`